# palimpsest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  interfaces.md  migration-guide.md  quickstart.md
palimpsest/: __init__.py  engine.py  exceptions.py
palimpsest/api/: __init__.py  core.py
palimpsest/cli/: __init__.py  config.py  main.py  utils.py
palimpsest/mcp/: __init__.py  config.py  lifecycle.py  server.py
palimpsest/models/: __init__.py  migrations.py  trace.py
palimpsest/models/versions/: __init__.py
palimpsest/search/: __init__.py
palimpsest/storage/: __init__.py  file_manager.py  indexer.py
scripts/: code_audit.py  integration_test.py
tests/: __init__.py  test_api.py  test_cli.py  test_file_manager.py  test_hybrid_migrations.py  test_indexer.py  test_integration.py  test_mcp.py  test_migrations.py  test_performance.py
